--- a/config.jinja
+++ b/config.jinja
@@ -27,24 +27,32 @@ resources:
     network: boomi-network
     rules:
       - name: allow-ssh-to-bastion
+        description: Allow SSH from anywhere to Bastion
         allowed:
           - IPProtocol: tcp
             ports:
               - "22"
               - "3389"
-        description: Allow SSH from anywhere to Bastion
         direction: INGRESS
         sourceRanges:
           - 0.0.0.0/0
         targetTags:
           - bastion
       - name: allow-http-https
+        description: Allow HTTP/HTTPS from anywhere
         allowed:
           - IPProtocol: tcp
             ports:
               - "80"
               - "443"
-        description: Allow HTTP/HTTPS from anywhere
+        direction: INGRESS
+        sourceRanges:
+          - 0.0.0.0/0
+      - name: allow-icmp
+        description: Allow ICMP from anywhere
+        allowed:
+          - IPProtocol: ICMP
+            ports:
         direction: INGRESS
         sourceRanges:
           - 0.0.0.0/0
