Added firewall icmp

--- a/config.jinja
+++ b/config.jinja
@@ -21,12 +21,12 @@ resources:
         privateIpGoogleAccess: true
         enableFlowLogs: false
 
-- name: boomi-allow-ssh-bastion
+- name: boomi-allow-firewall
   type: firewall.py
   properties:
     network: boomi-network
     rules:
-      - name: allow-ssh-to-bastion
+      - name: boomi-allow-ssh-to-bastion
         description: Allow SSH from anywhere to Bastion
         allowed:
           - IPProtocol: tcp
@@ -38,7 +38,7 @@ resources:
           - 0.0.0.0/0
         targetTags:
           - bastion
-      - name: allow-http-https
+      - name: boomi-allow-http-https
         description: Allow HTTP/HTTPS from anywhere
         allowed:
           - IPProtocol: tcp
@@ -48,7 +48,7 @@ resources:
         direction: INGRESS
         sourceRanges:
           - 0.0.0.0/0
-      - name: allow-icmp
+      - name: boomi-allow-icmp
         description: Allow ICMP from anywhere
         allowed:
           - IPProtocol: ICMP
