--- a/config.jinja
+++ b/config.jinja
@@ -11,12 +11,12 @@ resources:
     autoCreateSubnetworks: false
     subnetworks:
       - name: boomi-public-subnet
-        region: australia-southeast1
+        region: us-central1
         ipCidrRange: 172.16.0.0/21
         privateIpGoogleAccess: true
         enableFlowLogs: false
       - name: boomi-private-subnet
-        region: australia-southeast1
+        region: us-central1
         ipCidrRange: 172.16.8.0/21
         privateIpGoogleAccess: true
         enableFlowLogs: false
@@ -48,4 +48,10 @@ resources:
         direction: INGRESS
         sourceRanges:
           - 0.0.0.0/0
-
+      - name: boomi-allow-icmp
+        description: Allow ICMP from anywhere
+        allowed:
+          - IPProtocol: ICMP
+        direction: INGRESS
+        sourceRanges:
+          - 0.0.0.0/0
