--- a/templates/bastion-instance/bastion.jinja
+++ b/templates/bastion-instance/bastion.jinja
@@ -4,40 +4,16 @@
 {% set region = properties["region"] %}
 {% set CLUSTER_NAME = deployment + '-gke-cluster' %}
 
-{% set BASTION_VM_SA = deployment + '-bastion-vm' %}
 
 resources:
-- name: {{ BASTION_VM_SA }}
-  type: gcp-types/iam-v1:projects.serviceAccounts
-  properties:
-    accountId: {{ BASTION_VM_SA }}
-    displayName: Service Account used for Kubeflow admin actions.
-  accessControl:
-    gcpIamPolicy:
-    bindings:
-    - role: roles/container.admin
-      members:
-      - {{ 'serviceAccount:' + env['project_number'] + '@cloudservices.gserviceaccount.com' }}
-    - role: roles/container.clusterAdmin
-      members:
-      - {{ 'serviceAccount:' + BASTION_VM_SA + '@' + env['project'] + '.iam.gserviceaccount.com' }}
-    - role: roles/container.admin
-      members:
-      - {{ 'serviceAccount:' + BASTION_VM_SA + '@' + env['project'] + '.iam.gserviceaccount.com' }}
-
-
 - name: {{ deployment }}-it
   type: compute.v1.instanceTemplate
   properties:
     zone: {{ properties["zone"] }}
     properties:
       serviceAccounts: 
-      - email: {{ BASTION_VM_SA }}@{{ env['project'] }}.iam.gserviceaccount.com
+      - email: {{ properties["boomisa"] }}
         scopes:
-        - https://www.googleapis.com/auth/compute
-        - https://www.googleapis.com/auth/logging.write
-        - https://www.googleapis.com/auth/monitoring.write
-        - https://www.googleapis.com/auth/devstorage.full_control
         - https://www.googleapis.com/auth/cloud-platform
       tags:
         items:
