--- a/config.jinja
+++ b/config.jinja
@@ -49,13 +49,13 @@ resources:
 
     securityConfig:
       privatecluster: {{ properties["privatecluster"] }}
-      masterIpv4CidrBlock: 172.16.0.32/28
+      masterIpv4CidrBlock: 172.16.0.0/28
       secureNodeMetadata: true
       podSecurityPolicy: true
       masterAuthorizedNetworksConfig:
         cidrBlocks:
-        - cidrBlock: 1.2.3.4/32
-        - cidrBlock: 5.6.7.8/32
+        - cidrBlock: {{ privateSubnetCIDR }}
+        - cidrBlock: {{ publicSubnetCIDR }}
         enabled: true
 
 - name: file-store
