--- a/config.jinja
+++ b/config.jinja
@@ -4,7 +4,7 @@
 {% set CommonTags = properties["CommonTags"] %}
 
 resources:
-- name: network
+- name: boomi-network
   type: network.py
   properties:
     name: boomi-network
@@ -56,8 +56,8 @@ resources:
         sourceRanges:
           - 0.0.0.0/0
 
-- name: boomi-cloud-router
-  type: cloud_router.py
+- name: boomi-xcloud-router
+  type: xcloud_router.py
   properties:
     name: boomi-cloud-router
     network: boomi-network
@@ -66,6 +66,6 @@ resources:
     nat-name: boomi-nat
   metadata:
     dependsOn:
-      - network
+      - boomi-network
     runtimePolicy:
       - UPDATE_ALWAYS
