--- a/config.jinja
+++ b/config.jinja
@@ -60,12 +60,7 @@ resources:
   type: xcloud_router.py
   properties:
     name: boomi-cloud-router
-    network: boomi-network
+    network: $(ref.boomi-network.selfLink)
     region: us-central1
     asn: 65001
     nat-name: boomi-nat
-  metadata:
-    dependsOn:
-      - boomi-network
-    runtimePolicy:
-      - UPDATE_ALWAYS
