added enable api py

--- a/config.jinja
+++ b/config.jinja
@@ -94,3 +94,6 @@ resources:
         capacityGb: 1024
     networks:
       - network: $(ref.boomi-network.vpcName)
+  metadata:
+    dependsOn:
+      - enable-apis
