--- a/config.jinja
+++ b/config.jinja
@@ -102,6 +102,7 @@ resources:
   type: bastion_instance.py
   properties:
     network: $(ref.boomi-network.selfLink)
+    region: us-central1
     machineType: f1-micro
     machineImage: centos-cloud/global/images/family/centos-7
     minSize: 1
