Added bastion host

--- a/config.jinja
+++ b/config.jinja
@@ -100,6 +100,7 @@ resources:
   type: bastion_instance.py
   properties:
     network: $(ref.boomi-network.selfLink)
+    publicsubnet: $(ref.boomi-public-subnet.selfLink)
     region: us-central1
     machineType: f1-micro
     machineImage: centos-cloud/global/images/family/centos-7
