Added bastion host

--- a/config.jinja
+++ b/config.jinja
@@ -9,6 +9,8 @@ resources:
   properties:
     consumerId: {{ 'project:' + env['project'] }}
     apis:
+      - name: fileshare-api
+        serviceName: file.googleapis.com
       - name: cloudresourcemanager-api
         serviceName: cloudresourcemanager.googleapis.com
       - name: endpoints-api
