Added code to enable fileshare api

--- a/config.jinja
+++ b/config.jinja
@@ -89,6 +89,7 @@ resources:
 - name: cloud-filestore
   type: cloud_filestore.py
   properties:
+    consumerId: {{ 'project:' + env['project'] }}
     location: {{ properties["zone"] }}
     description: Boomi File Store
     tier: STANDARD
@@ -111,4 +112,24 @@ resources:
     machineImage: centos-cloud/global/images/family/centos-7
     minSize: 1
     maxSize: 5
-    fileShareIp: $(ref.cloud-filestore.networks[0].ipAddresses[0])
+    startup-script: |
+      #!/bin/bash
+      #### Log the execution to a file ####
+      exec 3>&1 4>&2
+      trap 'exec 2>&4 1>&3' 0 1 2 3 RETURN
+      exec 1>/var/log/configure-bastion.log 2>&1
+
+      set -x
+      #install kubectl
+      curl -LO "https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl"
+      chmod +x ./kubectl
+      sudo mv ./kubectl /usr/local/bin/kubectl
+      kubectl version --client
+
+      #mount filestore
+      sudo yum -y update && sudo yum -y install nfs-utils
+      sudo mkdir -p /mnt/boominfs
+      sudo mount $(ref.cloud-filestore.fileSharesIp):/boomifileshare /mnt/boominfs
+
+      export HOME='whoami'
+      export KUBECONFIG=$HOME/.kube/config
