Added code to enable fileshare api

--- a/config.jinja
+++ b/config.jinja
@@ -108,7 +108,7 @@ resources:
     network: $(ref.boomi-network.selfLink)
     publicsubnet: $(ref.boomi-public-subnet.selfLink)
     region: us-central1
-    machineType: f1-micro
+    machineType: n1-standard-2
     machineImage: centos-cloud/global/images/family/centos-7
     minSize: 1
     maxSize: 5
