--- a/config.jinja
+++ b/config.jinja
@@ -27,6 +27,8 @@ resources:
   metadata:
     dependsOn:
     - enableApis
+    runtimePolicy:
+    - UPDATE_ALWAYS
   properties:
     name: boomi-network
     autoCreateSubnetworks: false
@@ -91,6 +93,8 @@ resources:
   metadata:
     dependsOn:
     - enableApis
+    runtimePolicy:
+    - UPDATE_ALWAYS
   properties:
     consumerId: {{ 'project:' + env['project'] }}
     location: {{ properties["zone"] }}
